Fix products page - I fixed use of multiple containers to display cards by adding a flex-wrap css property to the card-group class - I fixed the full-width horizontal rule by adding a border to the card-group class

--- a/great-idea/css/index.css
+++ b/great-idea/css/index.css
@@ -165,7 +165,11 @@ hr {
 }
 
 .card-group {
+	flex-wrap: wrap;
 	justify-content: center;
+	border-top: 1px solid black;
+	border-bottom: 1px solid black;
+
 }
 
 .card {
